# cuEmbed

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md
benchmarks/: CMakeLists.txt  manual_benchmark.cu  sweep_parameters.sh
cuembed/: README.md
cuembed/include/: embedding_lookup.cuh  embedding_lookup_kernels.cuh  embedding_lookup_ops.cuh  embedding_lookup_types.cuh  index_transforms.cuh  index_transforms_kernels.cuh
docs/: Doxyfile
examples/pytorch/: CMakeLists.txt  cuembed_embedding.cu  cuembed_pyt.py  cuembed_test.py
tests/: CMakeLists.txt  test_datagen.cpp  test_embedding_against_cpu.cu  test_embedding_allocation.cu  test_embedding_backward.cu  test_embedding_forward.cu  test_embedding_ops.cu  test_embedding_transpose.cu  test_third_party_utils.cu
utils/: CMakeLists.txt
utils/include/: datagen.h  embedding_allocation.h  embedding_lookup_cpu.hpp  embedding_utils.h  index_transforms_cpu.hpp
utils/src/: datagen.cpp  embedding_allocation.cu  embedding_cpu.cu  embedding_gpu_backward.cu  embedding_gpu_forward.cu  embedding_gpu_transpose.cu
